--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
     sdk: flutter
   intl: 0.17.0
   get_it: 7.2.0
+  shimmer: 2.0.0
+  flutter_svg: 0.22.0
 
 dev_dependencies:
   flutter_test:
