Added test on weather repository, excluded mocks files from analyzer

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,6 +3,7 @@ include: package:lints/recommended.yaml
 analyzer:
   exclude:
     - '**.g.dart'
+    - '**.mocks.dart'
   strong-mode:
     implicit-casts: false
     implicit-dynamic: false
