--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dev_dependencies:
   mockito: 5.0.15
   build_runner: 2.0.0
   json_serializable: 4.1.1
+  flutter_launcher_icons: 0.9.2
 
 flutter:
   uses-material-design: true
@@ -61,3 +62,8 @@ fonts:
         weight: 800
       - asset: res/fonts/Roboto-Black.ttf
         weight: 900
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "res/assets/icon.png"
