--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   dio: 4.0.0
   equatable: 2.0.3
   flutter_bloc: 7.0.1
+  bloc: 7.0.0
   flutter:
     sdk: flutter
   get_it: 7.2.0
