--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,27 +7,27 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  cupertino_icons: 1.0.3
-  dio: 4.0.0
+  cupertino_icons: 1.0.4
+  dio: 4.0.4
   equatable: 2.0.3
-  flutter_bloc: 7.1.0
+  flutter_bloc: 8.0.1
   flutter:
     sdk: flutter
   get_it: 7.2.0
   shimmer: 2.0.0
-  flutter_svg: 0.22.0
-  permission_handler: 8.1.4+2
-  geolocator: 7.4.0
-  json_annotation: 4.0.1
+  flutter_svg: 1.0.3
+  permission_handler: 9.2.0
+  geolocator: 8.2.0
+  json_annotation: 4.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  bloc_test: 8.1.0
+  bloc_test: 9.0.3
   lints: 1.0.1
-  mockito: 5.0.15
-  build_runner: 2.0.0
-  json_serializable: 4.1.1
+  mockito: 5.1.0
+  build_runner: 2.1.8
+  json_serializable: 6.1.5
   flutter_launcher_icons: 0.9.2
 
 flutter:
