--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,12 +1,30 @@
-include: package:lints/recommended.yaml
+include: package:flutter_lints/flutter.yaml
 
 analyzer:
+  plugins:
+    - dart_code_metrics
   exclude:
     - '**.g.dart'
     - '**.mocks.dart'
   strong-mode:
     implicit-casts: false
     implicit-dynamic: false
+
+dart_code_metrics:
+  metrics:
+    - cyclomatic-complexity: 20
+    - maximum-nesting-level: 5
+  metrics-exclude:
+    - 'test/**'
+    - 'lib/common/routes_factory.dart'
+  rules:
+    - always-remove-listener
+    - no-boolean-literal-compare
+    - prefer-trailing-comma
+    - no-equal-then-else
+    - prefer-match-file-name:
+        exclude:
+          - 'test/**'
 
 linter:
   rules:
@@ -22,7 +40,6 @@ linter:
     always_put_required_named_parameters_first: true
     always_require_non_null_named_parameters: true
     annotate_overrides: true
-    avoid_annotating_with_dynamic: true
     avoid_bool_literals_in_conditional_expressions: true
     avoid_catches_without_on_clauses: true
     avoid_catching_errors: true
@@ -34,7 +51,6 @@ linter:
     avoid_init_to_null: true
     avoid_js_rounded_ints: true
     avoid_null_checks_in_equality_operators: true
-    avoid_positional_boolean_parameters: true
     avoid_private_typedef_functions: true
     avoid_redundant_argument_values: true
     avoid_renaming_method_parameters: true
@@ -143,7 +159,6 @@ linter:
     avoid_types_as_parameter_names: true
     avoid_web_libraries_in_flutter: true
     cancel_subscriptions: true
-    close_sinks: true
     comment_references: true
     control_flow_in_finally: true
     empty_statements: true
