--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   bloc_test: 9.0.3
-  lints: 1.0.1
   mockito: 5.1.0
   build_runner: 2.1.8
   json_serializable: 6.1.5
   flutter_launcher_icons: 0.9.2
+  dart_code_metrics: 4.12.0
+  flutter_lints: 1.0.4
 
 flutter:
   uses-material-design: true
