--- a/.github/workflows/upload_ios.yaml
+++ b/.github/workflows/upload_ios.yaml
@@ -23,6 +23,7 @@ jobs:
         uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
+          cache: true
 
       - name: 'Get dependencies'
         run: flutter pub get
@@ -31,19 +32,7 @@ jobs:
         run: flutter pub run build_runner build
 
       - name: 'Build IPA'
-        run: flutter build ios --release --no-codesign
-
-      - name: Sign ios build
-        uses: yukiarrr/ios-build-action@v1.5.0
-        with:
-          export-method: 'app-store'
-          project-path: ios/Runner.xcodeproj
-          workspace-path: ios/Runner.xcworkspace
-          output-path: 'Runner.ipa'
-          p12-base64: ${{ secrets.P12_BASE64 }}
-          mobileprovision-base64: ${{ secrets.MOBILEPROVISION_BASE64 }}
-          code-signing-identity: ${{ secrets.CODE_SIGNING_IDENTITY }}
-          team-id: ${{ secrets.TEAM_ID }}
+        run: flutter build ipa
 
       - name: Upload ios to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
