--- a/.github/workflows/upload_ios.yaml
+++ b/.github/workflows/upload_ios.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: Sign ios build
         uses: yukiarrr/ios-build-action@v1.5.0
         with:
-          export-method: 'app-store'
+          export-method: app-store
           project-path: ios/Runner.xcodeproj
           workspace-path: ios/Runner.xcworkspace
           output-path: 'Runner.ipa'
