--- a/.github/workflows/upload_ios.yaml
+++ b/.github/workflows/upload_ios.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   ios:
-    name: Upload ios
+    name: Build ios
     runs-on: macos-latest
 
     steps:
@@ -45,6 +45,31 @@ jobs:
           mobileprovision-base64: ${{ secrets.MOBILEPROVISION_BASE64 }}
           code-signing-identity: ${{ secrets.CODE_SIGNING_IDENTITY }}
           team-id: ${{ secrets.TEAM_ID }}
+
+      - name: Upload iPA
+        uses: actions/upload-artifact@v2
+        with:
+          name: ios-build
+          path: Runner.ipa
+
+
+  deploy_ios:
+    name: Upload iOS to Firebase App Distribution
+    needs: [ ios ]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Download Artifact
+        uses: actions/download-artifact@master
+        with:
+          name: ios-build
 
       - name: Upload ios to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
