--- a/.github/workflows/upload_android.yaml
+++ b/.github/workflows/upload_android.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: Upload artifact to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
-          appId: ${{secrets.FIREBASE_APP_ID}}
+          appId: ${{secrets.FIREBASE_ANDROID_APP_ID}}
           token: ${{secrets.FIREBASE_TOKEN}}
           groups: testers
           file: build/app/outputs/flutter-apk/app-debug.apk
