--- a/.github/workflows/upload_ios.yaml
+++ b/.github/workflows/upload_ios.yaml
@@ -74,7 +74,7 @@ jobs:
       - name: Upload ios to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
-          appId: ${{secrets.FIREBASE_APP_ID}}
+          appId: ${{secrets.FIREBASE_IOS_APP_ID}}
           token: ${{secrets.FIREBASE_TOKEN}}
           groups: testers
           file: Runner.ipa
