update on push branch

--- a/.github/workflows/upload_android.yaml
+++ b/.github/workflows/upload_android.yaml
@@ -3,7 +3,7 @@ name: Upload android build to Firebase App Distribution
 on:
   push:
     branches:
-      - upload
+      - master
 
 jobs:
   android:
